# infrafabric

./: .env  .gitignore  .if_sync_state.json  A17_VERIFICATION_CHECKLIST.md  AGENT-8-FINAL-DELIVERABLES.md  AGENTS_MD_UPDATE_2025-11-13_1135.md  AGENT_8-10_COMPLETION_REPORT.md  AGENT_A11_MCP_MULTIAGENT_BRIDGE_DELIVERY.md  AGENT_A18_COMPLETION_REPORT.md  AGENT_A30_PROMETHEUS_EXPORTER_DELIVERY.md  AIDE_DECISION_RAPIDEE_DEPOT_MODE_TRANSPORT.md  ANALYSE_COMPETITIVE_GEDIMAT_PASS1_2025.md  ANALYSE_COUTS_TRANSPORT_GEDIMAT_2025.md  ANALYSE_FINANCIERE_SENSIBILITE_GEDIMAT.md  ANALYSE_FRICTION_GEDIMAT_ANGELIQUE.md  ANALYSE_JURIDIQUE_GEDIMAT_FRANCHISES_TRANSPORT.md  ANALYSE_PRAGMATIQUE_PRIORITE_DEPOT_VOLUME_VS_URGENCE.md  ANALYSE_RETARDS_GEDIMAT_2025.md  ANALYSE_TYPOLOGIE_COMMANDES_GEDIMAT.md  ANALYSE_VRP_CONSOLIDATION_GEDIMAT_2025.md  ANNEXE_SOURCES.md  ANTHROPIC_EXECUTIVE_SUMMARY.md  ANTHROPIC_OUTREACH_MEMO.md  API_INTEGRATION_AUDIT.md  API_INTEGRATION_TIMELINE.md  API_REFERENCE_NDI.md  API_ROADMAP.json  AUDIT_IMPLEMENTATION_COMPLETE.txt  AUDIT_SUMMARY.md  AUTONOMOUS-NEXT-TASKS.md  AUTONOMOUS-SESSION-PROMPT.md  AWARENESS-CONVERSATIONS-SUMMARY.txt  BENCHMARKS_KPI_GEDIMAT_TABLEAU_SYNTHESE.txt  BENCHMARK_SECTEUR_GSB_GEDIMAT_2025.md  BRANCH-SUMMARY-FOR-REVIEW.md  CALL_FOR_EXTERNAL_REVIEW.md  CHANGELOG.md  CHATGPT5_RESPONSE.md  CHATGPT5_RESPONSE_PART3.md  CHATGPT5_TALKING_POINTS.md  (+531 more)
.claude/: mcp.json
.github/: PULL_REQUEST_TEMPLATE.md  secret_scanning.yml
.memory_bus/: distributed_memory.db  test_dataset_alpha.md
.venv-copilot/: pyvenv.cfg
.venv_tools/: pyvenv.cfg
(+1772 files in other folders)
