[project]
name = "infrafabric"
version = "2.0.0"
description = "Autonomous Infrastructure System (Series 2)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "redis>=5.0",
  "pydantic>=2.5",
  "google-generativeai>=0.3",
  "rich>=13.0",
  "typer>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.1.6",
  "mypy>=1.7",
  "pre-commit>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infrafabric"]

[tool.ruff]
line-length = 88
extend-exclude = ["docs/archive/legacy_root"]

[tool.mypy]
ignore_missing_imports = true
exclude = ["docs/archive/legacy_root"]
